# ChangeLog for kde-base/kghostview
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kghostview/ChangeLog,v 1.99 2009/10/12 21:13:37 abcd Exp $

  22 Jan 2010; Roman v. Gemmeren <strowi@hasnoname.de>:
  changed virtual/ghostview to app-text/ghostview-gpl

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kghostview-3.5.9.ebuild:
  KDE 3.5.9 removal

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> kghostview-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> kghostview-3.5.10.ebuild:
  Add ~mips keywords

  18 Jun 2009; Jeroen Roovers <jer@gentoo.org> kghostview-3.5.10.ebuild:
  Stable for HPPA (bug #271889).

  06 Jun 2009; Markus Meier <maekke@gentoo.org> kghostview-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  03 Jun 2009; Brent Baude <ranger@gentoo.org> kghostview-3.5.10.ebuild:
  Marking kghostview-3.5.10 ppc64 stable for bug 271889

  31 May 2009; nixnut <nixnut@gentoo.org> kghostview-3.5.10.ebuild:
  ppc stable #271889

*kghostview-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org> +kghostview-3.5.10.ebuild:
  Version bump.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  -kghostview-3.5.8.ebuild:
  Removed old versions.

  18 May 2008; Markus Meier <maekke@gentoo.org> kghostview-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

  14 May 2008; Markus Rothe <corsair@gentoo.org> kghostview-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  12 May 2008; Jeroen Roovers <jer@gentoo.org> kghostview-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> kghostview-3.5.9.ebuild:
  Marking kghostview-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kghostview-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> kghostview-3.5.8.ebuild,
  kghostview-3.5.9.ebuild:
  Keyword split KDE for HPPA.
