@@ -1,4 +1,4 @@
 DIST kdegraphics-3.5.10.tar.bz2 7440912 RMD160 94278e4419ab99885fc9efae9b6ba5ba787f831e SHA1 9634e3ab364d017152fb6d636efad8811aeec6c3 SHA256 bdc73fa98008aa64b72636282bf0d83c7bb3e6d4ba1d0831277dda469b57408b
-EBUILD kghostview-3.5.10.ebuild 998 RMD160 b41bb542d553f27cc0d596841a821ba8353680d0 SHA1 fd5e227c4ba00231fc83ec0b2b7f92552284fb43 SHA256 a3a835caae5df029192f0db6b3b823a484deaf1ceecc1c8cf96dfadd5523e022
-MISC ChangeLog 12177 RMD160 75f945bc3d37762393ed16dcc5d0b7788f8b5846 SHA1 edc99a745c923658e38c050635a1145ae8919140 SHA256 2a55088f5c15b4bb18977199e8c316e0f688310411913dc01d893b23dd12820d
+EBUILD kghostview-3.5.10.ebuild 640 RMD160 6ddc2597b4e32157deee727335fb55075d977dc5 SHA1 aee251258f00ade8e63e0c7cda542ed2b13b0131 SHA256 d3897523b0f7abdcc440904639c693b6d4413d2c5985d54b01553a92f997c20e
+MISC ChangeLog 12317 RMD160 41e9428a687370029fdc456a8aa5a56f9de22529 SHA1 0b44e7f4772d9ee4fd097f475fcc7041fac3e65a SHA256 8c95628fb32d1cd18d7f0f6812845d4ccb7d178f1456a3803b7513456d5a637a
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
