@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kghostview
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/kde-base/kghostview/ChangeLog,v 1.99 2009/10/12 21:13:37 abcd Exp $
+
+  11 Feb 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  kghostview-3.5.10.ebuild:
+  Port to EAPI=2 to avoid built_with_use calls
 
   22 Jan 2010; Roman v. Gemmeren <strowi@hasnoname.de>:
   changed virtual/ghostview to app-text/ghostview-gpl
